# xsoar-cli

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLUGIN_REFACTOR.md  README.md  TODO_TEST_COVERAGE.md  fixes-todo.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: main.yml  pull-request-open.yml  release.yml  update-changelog.yml
examples/: README.md  advanced_plugin.py
src/xsoar_cli/: __about__.py  cli.py  configuration.py  connection_errors.py  error_handling.py  log.py  utilities.py
src/xsoar_cli/case/: README.md  commands.py
src/xsoar_cli/config/: README.md  commands.py
src/xsoar_cli/error_handling/: http.py  (+1 more)
tests/: conftest.py  test_base.py  test_case.py  test_config.py  test_connection_errors.py  test_content.py  test_error_handling.py  test_graph.py  test_manifest.py  test_pack.py  test_playbook.py  test_plugins.py
tests/cli/: conftest.py  test_base.py  test_case.py  test_completions.py  test_config.py  test_content.py  test_graph.py  test_manifest.py  test_pack.py  test_playbook.py  test_plugins.py
tests/fixtures/: manifest_base.json  manifest_invalid.json  server_base_response_with_updates_and_one_extra.json
tests/test_data/: manifest_with_pack_not_on_server.json  server_base_response.json  server_base_response_missing_one_pack.json  server_base_response_with_updates.json
tests/unit/: conftest.py  test_artifact_azure.py  test_artifact_base.py  test_artifact_s3.py  test_cases.py  test_client.py  test_config_file.py  test_content_domain.py  test_content_filters.py  test_content_handlers.py  test_integrations.py  test_main.py  test_manifest_utils.py  test_packs.py  test_plugin_manager.py  test_rbac.py  test_validators.py  test_version_check.py
(+71 files in other folders)
